# ProductScraper

./: .coverage  .env.example  .gitignore  CODE_REVIEW.md  DEVTOOLS_README.md  Dockerfile  OLLAMA_README.md  README.md  REORGANIZATION_GUIDE.md  amazon_cookies.pkl  check_dataset.py  coverage.xml  debug_test.py  debug_test2.py  devtools_setup.py  example_spider.py  gui.py  main.py  package-lock.json  package.json  platform_test_scrapers.py  pyinstaller.spec  pyproject.toml  requirements-dev.txt  requirements.txt  ruff_report.json  ruff_report.txt  settings.example.json  test_login_functionality.py  test_output.txt  test_scrapers.py  unit_test_output.txt
.apm/: Implementation_Plan.md  Project_Summary.md  README.md  metadata.json
.apm/Memory/: Memory_Root.md  Phase_1_Summary.md  Phase_2_Summary.md  Phase_3_Summary.md
.apm/guides/: Context_Synthesis_Guide.md  Implementation_Plan_Guide.md  Memory_System_Guide.md  Project_Breakdown_Guide.md  Task_Assignment_Guide.md
.gemini/: GEMINI.md
.gemini/commands/: apm-1-initiate-setup.toml  apm-2-initiate-manager.toml  apm-3-initiate-implementation.toml  apm-4-initiate-adhoc.toml  apm-5-handover-manager.toml  apm-6-handover-implementation.toml  apm-7-delegate-research.toml  apm-8-delegate-debug.toml
.github/: copilot-instructions.md
.github/agents/: Data Analyst.agent.md  New Scraper.agent.md  Scraper Repair.agent.md  Scraper Testing.agent.md  Stealth & Infrastructure.agent.md
.github/prompts/: apm-1-initiate-setup.prompt.md  apm-2-initiate-manager.prompt.md  apm-3-initiate-implementation.prompt.md  apm-4-initiate-adhoc.prompt.md  apm-5-handover-manager.prompt.md  apm-6-handover-implementation.prompt.md  apm-7-delegate-research.prompt.md  apm-8-delegate-debug.prompt.md
.github/workflows/: cd-deployment.yml  ci-cd.yml  ci-testing.yml  ci.yml  nightly.yml  platform-testing.yml  release.yml
UI/: product_creator_ui.py  product_editor.py  product_viewer.py  requirements-dev.txt  shopsite_constants.py
UI/tests/: test_cross_sell.py
apify_actors/amazon-scraper/: Dockerfile  SCRAPER_IMPROVEMENTS.md  requirements.txt  test_large_scale.py
apify_actors/bradley-scraper/: Dockerfile  README.md  requirements.txt
apify_actors/central-pet-scraper/: README.md  requirements.txt
apify_actors/coastal-scraper/: README.md  requirements.txt
apify_actors/mazuri-scraper/: apify.json
apify_actors/orgill-scraper/: .dockerignore  input.json  requirements.txt
apify_actors/petfoodex-scraper/: requirements.txt
apify_actors/phillips-scraper/: README.md  apify.json  requirements.txt  test_comprehensive.py
archive/scrapers_archive/: main.py  master.py
cookies/: README.md  cookie_manager.py
data/input/: missing103025.xlsx  new092525.xlsx  new101725.xlsx
data/spreadsheets/: missingimage090425.xlsx
docs/: ANTI_DETECTION_GUIDE.md  API_INTEGRATION.md  CODE_REVIEW.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  LLM_CLASSIFICATION.md  LLM_EFFICIENCY_IMPROVEMENTS.md  MAINTENANCE_GUIDE.md  README.md  README_scrape_display.md  REORGANIZATION_GUIDE.md  SCRAPER_CONFIGURATION_GUIDE.md  SCRAPER_DEVELOPER_GUIDE.md  SCRAPER_DEV_TOOLS.md  SCRAPER_GUIDE.md  SCRAPER_MIGRATION_GUIDE.md  TESTING_GUIDE.md  UI_FIXES_GUIDE.md
examples/: scraper_dev_demo.py  workflow_executor_demo.py
inventory/: final_db_check.py  process_xml_to_db.py  query_db.py  test_special_order.py
inventory/classification/: classifier.py  cross_sell_logic.py
inventory/constants/: shopsite_pages.py
scrapers/: amazon.py  bradley_caldwell.py  central_pet.py  coastal.py  discontinued.py  generic_scraper.py  master.py  mazuri.py  orgill.py  petfoodex.py  phillips.py
scrapers/archive/: chewy.py  nassau.py
scrapers/input/: missing103025.xlsx
scrapy_project/: README.md
scrapy_project/scrapy_project/: items.py  loaders.py  pipelines.py  settings.py
scripts/: check_dataset.py  classify_excel.py  deploy_scrapers.py  generate_failure_report.py  rollback.py  run_gui.py  run_scraper.py  run_scraper_tests.py  test_all_scrapers.py  test_individual_scrapers.py  test_scrapers.py  validate_deployment.py
spreadsheets/: discontinued_remaining.xlsx  newfornick081325.xlsx  newproducts091825.xlsx
src/: main.py
src/config/: settings.example.json  shopsite_constants.py  shopsite_pages.py  test_data.json
src/core/: __init__.py  adaptive_retry_strategy.py  anti_detection_manager.py  apify_platform_client.py  assign_cross_sell.py  captcha_solver.py  data_quality_scorer.py  database_import.py  database_queries.py  database_refresh.py  database_validation.py  database_verification.py  failure_analytics.py  failure_classifier.py  field_mapping.py  local_apify.py  platform_testing_client.py  platform_testing_integration.py  results_consolidator.py  scraper_testing_client.py  scraper_testing_integration.py  settings_manager.py  test_runner.py
src/data/: product_pages.json
src/scrapers/: __init__.py  amazon.py  bradley_caldwell.py  central_pet.py  coastal.py  discontinued.py  exceptions.py  generic_scraper.py  main.py  master.py  mazuri.py  orgill.py  petfoodex.py  phillips.py  result_collector.py  result_storage.py  scrapy_scraper.py  selector_storage.py  sku_loader.py
src/scrapers_archive/: main.py  master.py
src/tests/: verify_actions.py
src/ui/: __init__.py  main_window.py  product_classify_ui.py  product_creator_ui.py  product_cross_sell_ui.py  product_editor.py  product_viewer.py  results_hub.py  run_tests.py  scraper_builder_dialog.py  scraper_management_dialog.py  settings_dialog.py  styling.py  utils.py  visual_selector_picker.py  widgets.py
src/utils/: check_dataset.py  (+5 more)
test/: README.md  __init__.py  demo_granular_testing.py  test_classification.py  test_core_logic.py  test_scraper_fields_clean.py  test_xml_parsing.py
tests/: README.md  conftest.py  platform_test_scrapers.py  requirements-dev.txt  scraper_testing.py  test_login_functionality.py  test_migrated_scrapers.py  test_scrapers.py
ui_designs/: README.md  test_dialog.ui
util/: browser_util.py  cookies.py  download_images.py  image_util.py  scrape_display.py  scrape_util.py  scrape_util_fixed.py  xlsx2xls.py
(+224 files in other folders)
